# libvirt

./: .color_coded.in  .ctags  .cvsignore  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab_pages_redirects  .gitmodules  .gitpublish  .hgignore  .mailmap  .travis.yml  .x-sc_avoid_ctype_macros  .x-sc_avoid_if_before_free  .x-sc_avoid_write  .x-sc_bindtextdomain  .x-sc_m4_quote_check  .x-sc_po_check  .x-sc_prohibit_HAVE_MBRTOWC  .x-sc_prohibit_VIR_ERR_NO_MEMORY  .x-sc_prohibit_always_true_header_tests  .x-sc_prohibit_asprintf  .x-sc_prohibit_close  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_fork_wrappers  .x-sc_prohibit_gethostby  .x-sc_prohibit_gettext_noop  .x-sc_prohibit_have_config_h  .x-sc_prohibit_nonreentrant  .x-sc_prohibit_readlink  .x-sc_prohibit_sprintf  .x-sc_prohibit_strcmp  .x-sc_prohibit_strcmp_and_strncmp  .x-sc_prohibit_strncmp  .x-sc_prohibit_strncpy  .x-sc_prohibit_test_minus_ao  .x-sc_prohibit_xmlGetProp  .x-sc_require_config_h  (+55 more)
build-aux/: .cvsignore  .gitignore  Makefile.in  Makefile.nonreentrant  augeas-gentest.pl  bracket-spacing.pl  cfg.mk  check-spacing.pl  find-unnecessary-if-before-free  header-ifdef.pl  maint.mk  meson.build  minimize-po.pl  mktempd  mock-noinline.pl  prohibit-duplicate-header.pl  syntax-check.mk  useless-if-before-free  vc-list-files
daemon/: .gitignore  Makefile.am  THREADING.txt  THREADS.txt  admin.c  admin.h  admin_server.c  admin_server.h  dispatch.c  dispatch.h  event.c  event.h  libvirt-guests.init.in  libvirt-guests.sysconf  libvirt.rules  libvirtd-config.c  libvirtd-config.h  libvirtd.aug  libvirtd.c  libvirtd.conf  libvirtd.h  libvirtd.init.in  libvirtd.libxl.logrotate.in  libvirtd.logrotate.in  libvirtd.lxc.logrotate.in  libvirtd.pod  libvirtd.pod.in  libvirtd.policy-0  libvirtd.policy-1  libvirtd.policy.in  libvirtd.qemu.logrotate.in  libvirtd.sasl  libvirtd.service.in  libvirtd.socket.in  libvirtd.stp  libvirtd.sysconf  libvirtd.sysctl  libvirtd.uml.logrotate.in  libvirtd.upstart  mdns.c  (+26 more)
docs/: .cvsignore  .gitignore  404.html.in  404.rst  APIchunk0.html  APIchunk1.html  APIchunk2.html  APIchunk3.html  APIchunk4.html  APIchunk5.html  APIchunk6.html  APIchunk7.html  APIconstructors.html  APIfiles.html  APIfunctions.html  APIsymbols.html  ChangeLog.awk  ChangeLog.xsl  FAQ.html  FAQ.html.in  Goals  Makefile.am  Plan  acl.html.in  acl.rst  aclpolkit.html.in  aclpolkit.rst  advanced-tests.rst  analysis  api.html  api.html.in  api.rst  api.xsl  api_extension.html  api_extension.html.in  api_extension.rst  apibuild.py  apps.html  apps.html.in  apps.rst  (+307 more)
examples/: Makefile.am  meson.build
po/: .cvsignore  .gitignore  LINGUAS  Makefile.am  Makevars  POTFILES  POTFILES.in  README.md  README.rst  af.mini.po  af.po  am.mini.po  am.po  anp.mini.po  anp.po  ar.mini.po  ar.po  as.mini.po  as.po  ast.mini.po  ast.po  bal.mini.po  bal.po  be.mini.po  be.po  bg.mini.po  bg.po  bn.mini.po  bn.po  bn_IN.mini.po  bn_IN.po  bo.mini.po  bo.po  br.mini.po  br.po  brx.mini.po  brx.po  bs.mini.po  bs.po  ca.mini.po  (+174 more)
proxy/: .gitignore  Makefile.am  libvirt_proxy.c  proxy.h  proxy_client.c
python/: .cvsignore  .gitignore  Makefile.am  README  TODO  generator.py  libvir-python-api.xml  libvir.c  libvir.py  libvir_wrap.h  libvirt-lxc-override-api.xml  libvirt-lxc-override.c  libvirt-override-api.xml  libvirt-override-virConnect.py  libvirt-override-virDomain.py  libvirt-override-virDomainSnapshot.py  libvirt-override-virStoragePool.py  libvirt-override-virStream.py  libvirt-override.c  libvirt-override.py  libvirt-python-api.xml  libvirt-qemu-override-api.xml  libvirt-qemu-override.c  libvirt_wrap.h  sanitytest.py  types.c  typewrappers.c  typewrappers.h  virConnect.py
qemud/: .cvsignore  Makefile.am  THREADING.txt  bridge.c  bridge.h  buf.c  buf.h  conf.c  conf.h  config.h  default-network.xml  dispatch.c  dispatch.h  driver.c  driver.h  event.c  event.h  internal.h  iptables.c  iptables.h  libvirtd.aug  libvirtd.conf  libvirtd.in  libvirtd.init.in  libvirtd.policy  libvirtd.policy-1  libvirtd.sasl  libvirtd.sysconf  libvirtd_qemu.aug  mdns.c  mdns.h  protocol.c  protocol.h  protocol.x  qemud.c  qemud.h  remote.c  remote_dispatch_args.h  remote_dispatch_localvars.h  remote_dispatch_proc_switch.h  (+12 more)
scripts/: Makefile.am  README  apibuild.py  augeas-gentest.py  check-aclperms.py  check-aclrules.py  check-driverimpls.py  check-drivername.py  check-file-access.py  check-html-references.py  check-pot.py  check-remote-protocol.py  check-symfile.py  check-symsorting.py  cocci-macro-file.h  coverage-report-entry.pl  coverage-report.pl  coverage-report.xsl  dtrace2systemtap.py  esx_vi_generator.py  genaclperms.py  genpolkit.py  gensystemtap.py  group-qemu-caps.py  header-ifdef.py  hvsupport.py  hyperv_wmi_generator.py  merge-systemd-units.py  meson-dist.py  meson-gen-authors.py  meson-gen-def.py  meson-gen-sym.py  meson-html-gen.py  meson-install-dirs.py  meson-install-symlink.py  meson-install-web.py  meson-python.sh  meson-timestamp.py  meson-warnings.py  meson.build  (+8 more)
src/: .cvsignore  .gitignore  Makefile.am  README  admin_protocol-structs  bridge.c  bridge.h  buf.c  buf.h  capabilities.c  capabilities.h  cgroup.c  cgroup.h  check-aclperms.pl  check-aclrules.pl  check-driverimpls.pl  check-drivername.pl  check-symfile.pl  check-symsorting.pl  conf.c  conf.h  console.c  console.h  datatypes.c  datatypes.h  domain_conf.c  domain_conf.h  domain_event.c  domain_event.h  driver-hypervisor.h  driver-interface.h  driver-network.h  driver-nodedev.h  driver-nwfilter.h  driver-secret.h  driver-state.h  driver-storage.h  driver-stream.h  driver.c  driver.h  (+218 more)
tests/: .cvsignore  .gitignore  .valgrind.supp  Makefile.am  bhyveargv2xmlmock.c  bhyveargv2xmltest.c  bhyvexml2argvmock.c  bhyvexml2argvtest.c  bhyvexml2xmltest.c  capabilityschematest  check-file-access.pl  chxml2xmlmock.c  chxml2xmltest.c  commandhelper.c  commandtest.c  conftest.c  cpuset  cputest.c  daemon-conf  define-dev-segfault  domaincapsmock.c  domaincapsschematest  domaincapstest.c  domainconftest.c  domainschematest  domainsnapshotschematest  (+279 more)
(+17286 files in other folders)
